--- a/avBooth/review-ballot-directive/review-ballot-directive.less
+++ b/avBooth/review-ballot-directive/review-ballot-directive.less
@@ -26,6 +26,12 @@
       padding-top: 20px;
     }
 
+    .selected-answer,
+    .question-title,
+    .question-description {
+      word-break: break-all;
+    }
+
     ul, ol {
       margin-bottom: 0;
       padding-bottom: 10px;
